@@ -133,7 +133,7 @@ class views_plugin_exposed_form extends views_plugin {
   function query() {
     $view = $this->view;
     $exposed_data = $view->exposed_data;
-    $sort_by = $exposed_data['sort_by'];
+    $sort_by = isset($exposed_data['sort_by']) ? $exposed_data['sort_by'] : NULL;
     if (!empty($sort_by)) {
       $handler = $view->sort[$sort_by];
       if (isset($handler)) {
@@ -196,9 +196,19 @@ class views_plugin_exposed_form extends views_plugin {
         $form['reset']['#weight'] = 10;
       }
     }
+
+    $pager = $this->view->display_handler->get_plugin('pager');
+    if ($pager) {
+      $pager->exposed_form_alter($form, $form_state);
+      $form_state['pager_plugin'] = $pager;
+    }
   }
 
-  function exposed_form_validate(&$form, &$form_state) { }
+  function exposed_form_validate(&$form, &$form_state) {
+    if (isset($form_state['pager_plugin'])) {
+      $form_state['pager_plugin']->exposed_form_validate($form, $form_state);
+    }
+  }
 
   /**
   * This function is executed when exposed form is submited.
@@ -214,6 +224,10 @@ class views_plugin_exposed_form extends views_plugin {
   function exposed_form_submit(&$form, &$form_state, &$exclude) {
     if (isset($form_state['values']['op']) && $form_state['values']['op'] == t('Reset')) {
       $this->reset_form($form, $form_state);
+    }
+    if (isset($form_state['pager_plugin'])) {
+      $form_state['pager_plugin']->exposed_form_submit($form, $form_state, $exclude);
+      $exclude[] = 'pager_plugin';
     }
   }
 
