@@ -179,4 +179,22 @@ class views_plugin_pager extends views_plugin {
     return $this->get_items_per_page()
       && $this->total_items > (intval($this->current_page) + 1) * $this->get_items_per_page();
   }
+
+  function exposed_form_alter(&$form, &$form_state) { }
+
+  function exposed_form_validate(&$form, &$form_state) { }
+
+  function exposed_form_submit(&$form, &$form_state, &$exclude) { }
+
+  function uses_exposed() {
+    return FALSE;
+  }
+
+  function items_per_page_exposed() {
+    return FALSE;
+  }
+
+  function offset_exposed() {
+    return FALSE;
+  }
 }
