@@ -994,7 +994,7 @@ function views_exposed_form($form, &$form_state) {
   $form['submit'] = array(
     '#name' => '', // prevent from showing up in $_GET.
     '#type' => 'submit',
-    '#value' => t('Submit'),
+    '#value' => t('Apply'),
     '#id' => drupal_html_id('edit-submit-' . $view->name),
   );
 
