@@ -93,6 +93,7 @@ Views 3.x-7.x-dev
     o by dereine: add testing for renaming a exposed form reset button
     o #660196 by dagmar: Allow changing the "Reset" button label in the exposed form settings.
     o #669448: items per page override from summary style stopped working with pluggable pagers.
+    o #324092 by dagmar: Expose "Items per page" and "Offset".
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
